sudha/src/objects/Full_Calendar__c.object
<CustomObject>
    <description>A configuration for a single calendar</description>
    <fields>
        <fullName>Detail_Data_Fields__c</fullName>
        <defaultValue>&apos;name, description, stageName, type&apos;</defaultValue>
        <description>A comma separated list of fields that will be shown to the user when they click an event on the calendar.</description>
        <inlineHelpText>A comma separated list of fields that will be shown to the user when they click an event on the calendar.</inlineHelpText>
        <label>Detail Data Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <defaultValue>&apos;end_time__c&apos;</defaultValue>
        <description>The API name of the field on the selected object that contains the end time for the calendar events.</description>
        <inlineHelpText>The API name of the field on the selected object that contains the end time for the calendar events.</inlineHelpText>
        <label>End DateTime</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>What is the name of the object that will provide data for this calendar?</description>
        <inlineHelpText>What is the name of the object that will provide data for this calendar?</inlineHelpText>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Datetime__c</fullName>
        <defaultValue>&apos;start_time__c&apos;</defaultValue>
        <description>The API name of the field on the selected object that contains the start time for the calendar events.</description>
        <inlineHelpText>The API name of the field on the selected object that contains the start time for the calendar events.</inlineHelpText>
        <label>Start Datetime</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_This_Calendar__c</fullName>
        <formula>HYPERLINK(&apos;/apex/fullCalendar?id=&apos;+Id ,&apos;View this Calendar&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View This Calendar</label>
        <type>Text</type>
    </fields>
    <label>Full Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAL-{00000}</displayFormat>
        <label>Full Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Full Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>